testsuite/tests/properties/invalid_node_builder/null.lkt
import common_empty

class Example: BaseExample {
    fun f(): NodeBuilder[EmptyNode] = null[NodeBuilder[EmptyNode]]
}
